<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2011-2025 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>52</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.maven</groupId>
    <artifactId>directory-maven-plugin</artifactId>
    <version>1.2.1-SNAPSHOT</version>
    <packaging>maven-plugin</packaging>

    <name>directory-maven-plugin</name>
    <description>Provides goals to discover various paths based on the projects currently building. For example,
        directory of the execution root project, directory of a given project (based on groupId/artifactId),
        and highest project basedir that hasn't been resolved from the repository.</description>
    <url>https://github.com/hazendaz/directory-maven-plugin</url>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
            <comments>htmlcompressor is distributed under Apache License 2.0</comments>
        </license>
    </licenses>

    <prerequisites>
        <maven>3.6.3</maven>
    </prerequisites>

    <scm>
        <connection>scm:git:ssh://github.com/hazendaz/directory-maven-plugin.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/directory-maven-plugin.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/directory-maven-plugin</url>
    </scm>
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/hazendaz/directory-maven-plugin/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Github</system>
        <url>https://github.com/hazendaz/directory-maven-plugin/actions</url>
    </ciManagement>
    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>GitHub Pages</name>
            <url>scm:git:ssh://git@github.com/hazendaz/directory-maven-plugin.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Set Java Runtimes -->
        <java.version>11</java.version>
        <java.release.version>11</java.release.version>

        <!-- Checkstyle -->
        <checkstyle.config>checkstyle-4space.xml</checkstyle.config>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.maven.directory</module.name>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1724010554</project.build.outputTimestamp>

        <!-- Maven Artifacts -->
        <maven.version>3.9.9</maven.version>
        <maven-plugin.version>3.15.1</maven-plugin.version>

        <!-- Resolver -->
        <resolver.version>1.9.22</resolver.version>

        <!-- Junit -->
        <junit.version>5.12.2</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-core</artifactId>
            <version>${maven.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>${maven.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>${maven-plugin.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.resolver</groupId>
            <artifactId>maven-resolver-api</artifactId>
            <version>1.9.22</version>
            <scope>provided</scope>
        </dependency>

        <!-- Junit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>${maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-descriptor</id>
                        <goals>
                            <goal>descriptor</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>help-goal</id>
                        <goals>
                            <goal>helpmojo</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-plugin-report-plugin</artifactId>
                <version>${maven-plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>

</project>
